<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_clear_history">Clear History</string>
    <string name="hint_values">Enter Values</string>
    <string name="action_calculate">Calculate</string>
    <string name="action_clear">Clear</string>
    <string name="action_add">+</string>
    <string name="action_subtract">-</string>
    <string name="action_multiply">*</string>
    <string name="action_divide">/</string>

</resources>